--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 </head>
 <body>
 
+    <h1>Cronômetro</h1>
+
     <main class="container">
 
         <div id="display">00:00</div>
@@ -28,7 +30,10 @@
 
     </main>
     
-
+    <footer>
+        <p>Página desenvolvida por Beatriz Felippo</p>
+        <p>© 2025. Todos os direitos reservados</p>
+    </footer>
 
 
     <script src="./script.js"></script>
